app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: repte17-web
spec:
  selector:
    app: repte17-web
  ports:
  - port: 80
    targetPort: 80
